2. Очередь с приоритетом на LinkedList[#211884]